add read last version
