# backend/src/documents/dto/create-document.dto.ts
@@ -10,4 +10,8 @@ export class CreateDocumentDto {
   @IsArray()
   @IsUUID('all', { each: true })
   groupIds?: string[];
+
+  @IsOptional()
+  @IsUUID()
+  folderId?: string;
 }
